MDEV-18701: Wrong result from query that uses INTERSECT after UNION ALL

Recalculate distinct pointer if we cut chain of SELECTs